# flipp-scraper

./: README.md  app.py  pyproject.toml  scrape_halifax.py
.github/workflows/: scrape_halifax_flyers.yml
data/: flyer-items_B3M0L1_2026-05-31.csv  flyer-items_B3M0L1_2026-06-02.csv  flyer-items_B3M0L1_2026-06-03.csv  flyer-items_B3M0L1_2026-06-08.csv  flyer-items_B3M0L1_2026-06-09.csv  flyer-items_B3M0L1_2026-06-10.csv  flyer-items_B3M0L1_2026-06-11.csv  flyer-items_B3M0L1_2026-06-15.csv  flyer-items_B3M0L1_2026-06-16.csv  flyer-items_B3M0L1_2026-06-17.csv  flyer-items_B3M0L1_2026-06-22.csv  flyer-items_B3M0L1_2026-06-23.csv  flyer-items_B3M0L1_2026-06-24.csv  flyer-items_B3M0L1_2026-06-29.csv  flyer-items_B3M0L1_2026-06-30.csv  flyer-items_B3M0L1_2026-07-01.csv
flipp_scraper/: __init__.py  api.py  scraper.py
tests/: test_api.py  test_scraper.py
